--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -354,7 +354,7 @@ body
     </head>
     <body>
         <article class="vscode-light markdown-body">
-            <h1 id="phaser-01-development-environment">Phaser 01 - Development Environment</h1>
+            <h1 id="development-environment">Development Environment</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
 <blockquote>
