Update Dev-Env to use proper asset links.

--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -473,7 +473,7 @@ In order to make your life a while lot easier, make sure the following options a
 <li>Add to PATH option.</li>
 </ul>
 <p>You can also have it create a desktop icon for easier access to VSCode in the future.</p>
-<p><img src="/assets/vscode-install.png" alt="Visual Studio Code Interface"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/vscode-install.png" alt="Visual Studio Code Interface"></p>
 <blockquote>
 <p>The above image highlights the options that helps make your life easier when working with VSCode.</p>
 </blockquote>
@@ -481,13 +481,13 @@ In order to make your life a while lot easier, make sure the following options a
 <p>It is a good idea to get familiar with some of the areas of VSCode, as I will refer to these names throughout the tutorial. If you want a full list of tips and tricks for VSCode, you can look here: <a href="https://github.com/Microsoft/vscode-tips-and-tricks">Collection of helpful tips and tricks for VSCode</a></p>
 <h4 id="221-interface">2.2.1. <a name='Interface'></a>Interface</h4>
 <p>You can find a full description of all the interface features here: <a href="https://code.visualstudio.com/docs/getstarted/userinterface">[LINK]</a>, but I will primarily reference what is shown in this image.</p>
-<p><img src="/assets/panelNames.png" alt="Visual Studio Code Interface"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/panelNames.png" alt="Visual Studio Code Interface"></p>
 <h4 id="222-activity-bar-icons">2.2.2. <a name='ActivityBarIcons'></a>Activity Bar Icons</h4>
 <p>These icons represent the main/primary functionalities of VSCode, and as such you will likely be referring to them quite often.</p>
-<p><img src="/assets/iconNames.png" alt="Activity Bar Icons"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/iconNames.png" alt="Activity Bar Icons"></p>
 <h4 id="223-integrated-terminal">2.2.3. <a name='IntegratedTerminal'></a>Integrated Terminal</h4>
 <p>We will also use the integrated terminal, which you can show by going to <strong>[View➞Integrated Terminal]</strong> (this will also tell you the keyboard shortcut for it, right next to it).</p>
-<p><img src="/assets/terminal.png" alt="Integrated Terminal"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/terminal.png" alt="Integrated Terminal"></p>
 <h2 id="3-initial-setup">3. <a name='InitialSetup'></a>Initial Setup</h2>
 <p>We need to get our project set up so that we can begin.</p>
 <blockquote>
@@ -599,7 +599,7 @@ Feel free to copy/paste it, so you get to keep my comments, they explain what ea
 </div></code></pre>
 <p>This itself does nothing, as the game contains no actual &quot;stuff&quot; for us to display and debug against, so let's add that.</p>
 <p>Download the following image: <a href="https://cdn.discordapp.com/icons/172773076881113090/f9ee342ca79fbaef5a869dfe7d8803cd.png">[LINK]</a></p>
-<p><img src="/assets/ggc.png" alt="GGC Logo"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/ggc.png" alt="GGC Logo"></p>
 <p>I suggest renaming the file, in my case I renamed it to <code>ggc.png</code> and put it into the <code>assets/</code> folder, I highly recommend you do the same, so you can more easily follow along.<br>
 Let's add the image to our game. First we need to preload it, to make sure it is loaded into memory so we can render it later.
 Add the following code inside the <code>game.js</code>'s <code>preload()</code> function:</p>
@@ -829,7 +829,7 @@ This might change in future updates of the Chrome Debugger.</p>
 </blockquote>
 <h3 id="92-breakpoints">9.2. <a name='Breakpoints'></a>Breakpoints</h3>
 <p>Breakpoints is a way to tell the debugger to stop execution of our code, at the point we specify. In VSCode you specify a breakpoint the same was as in many other programming tools, by clicking in the left margin that also has the line numbers. A red dot appears when a breakpoint has been set, and it can be removed by clicking it again.</p>
-<p><img src="/assets/breakpoint.png" alt="Breakpoint Example"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/breakpoint.png" alt="Breakpoint Example"></p>
 <blockquote>
 <p>For the more advanced needs, you can right-click the breakpoint and make a conditional breakpoint instead, such as one that only triggers when certain conditions are met.</p>
 </blockquote>
@@ -846,7 +846,7 @@ Let's see if we can output a message to the console, that tells us the width and
 </div></code></pre>
 <p>If you save the file, make sure the server is running, and then enable debugging by hitting F5, it should now display in the debug console (both in VSCode and the browsers own Developer Tools Console).
 It should look something like this:</p>
-<p><img src="/assets/debugConsole.png" alt="Debug Console Output"></p>
+<p><img src="https://graloth.github.io/Phaser-Tutorials/assets/debugConsole.png" alt="Debug Console Output"></p>
 <p>You can now output messages to the console, enjoy being able to debug more abstract data.</p>
 <h2 id="10-typos-errors-etc">10. <a name='TyposErrorsetc.'></a>Typos, Errors, etc.</h2>
 <p>If you find any typos or errors in this tutorial, or you are simply stuck. You can reach me on <a href="https://discordapp.com">Discord</a> as <code>Graloth#6217</code> or via email on <a href="mailto:dion@graloth.com">dion@graloth.com</a>.</p>
