--- a/index.html
+++ b/index.html
@@ -356,12 +356,14 @@ body
 </style>
 </head>
 <body>
-    <h1>Phaser Tutorial Index</h1>
-    <p>A collection of Phaser Tutorials, meant as a teaching aid.</p>
-    <blockquote>None of these tutorials should be considered a <b>complete</b> guide to Phaser, they only serve the purpose to get you going.</blockquote>
+	<article class="vscode-light markdown-body">
+		<h1>Phaser Tutorial Index</h1>
+		<p>A collection of Phaser Tutorials, meant as a teaching aid.</p>
+		<blockquote>None of these tutorials should be considered a <b>complete</b> guide to Phaser, they only serve the purpose to get you going.</blockquote>
 
-    <ol>
-        <li><a href="Development-Environment.html">Development Environment</a></li>
-    </ol>
+		<ol>
+			<li><a href="Development-Environment.html">Development Environment</a></li>
+		</ol>
+	</article>
 </body>
 </html>
