--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -354,7 +354,8 @@ body
     </head>
     <body>
         <article class="vscode-light markdown-body">
-            <h1 id="development-environment">Development Environment</h1>
+            <p><a href="index.html">Back to Index</a>.</p>
+<h1 id="development-environment">Development Environment</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
 <!-- vscode-markdown-toc -->
