--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -350,6 +350,19 @@ body
 {
     height: 20px;
 }
+ul, ul li {
+    list-style: none;
+}
+ul {
+    margin: 0;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+}
+ol li {
+    list-style-type: decimal;
+}
 </style>
     </head>
     <body>
@@ -358,6 +371,7 @@ body
 <h1 id="development-environment">Development Environment</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
+<h1 id="table-of-contents">Table of Contents</h1>
 <!-- vscode-markdown-toc -->
 <ul>
 <li>
@@ -444,6 +458,7 @@ In this first tutorial, we will focus on getting your development environment in
 	autoSave=true
 	/vscode-markdown-toc-config -->
 <!-- /vscode-markdown-toc -->
+<hr>
 <h2 id="1-prerequisites">1. <a name='Prerequisites'></a>Prerequisites</h2>
 <p>In order to follow along more easily in this tutorial, I highly recommend you download the following items.</p>
 <ol>
