--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -377,7 +377,7 @@ ol li {
     </head>
     <body>
         <article class="vscode-light markdown-body">
-            <p><strong><a href="/">« Back to Index</a></strong>.</p>
+            <p><strong><a href="/Phaser-Tutorials/">« Back to Index</a></strong>.</p>
 <h1 id="development-environment">Development Environment</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
