--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -350,39 +350,16 @@ body
 {
     height: 20px;
 }
-@font-face {
-    font-family: FiraCodeLight;
-    src: url(fonts/FiraCode-Light.woff);
-}
-@font-face {
-    font-family: FiraCodeMedium;
-    src: url(fonts/FiraCode-Medium.woff);
-}
-@font-face {
-    font-family: FiraCode;
-    src: url(fonts/FiraCode-Regular.woff);
-}
-@font-face {
-    font-family: FiraCode;
-    src: url(fonts/FiraCode-Bold.woff);
-    font-weight: bold;
-}
-@font-face {
-    font-family: FiraCodeRetina;
-    src: url(fonts/FiraCode-Retina.woff);
-}
-
-
 /*---------------------------------------------------------------------------------------------
  *  Copyright (c) Microsoft Corporation. All rights reserved.
  *  Licensed under the MIT License. See License.txt in the project root for license information.
  *--------------------------------------------------------------------------------------------*/
 
 body {
-	font-family: "FiraCodeRegular" , "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
+	font-family: "Fira Code" , "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
 	font-size: 14px;
 	padding: 0 26px;
-	line-height: 22px;
+	line-height: 1.5em;
 	word-wrap: break-word;
 }
 
@@ -544,7 +521,7 @@ blockquote {
 }
 
 code {
-	font-family: "FiraCodeRegular", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
+	font-family: "Fira Code", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
 	font-size: 14px;
 	line-height: 19px;
 }
@@ -747,7 +724,7 @@ ol li {
     </head>
     <body>
         <article class="vscode-light markdown-body">
-            <p><strong><a href="/Phaser-Tutorials/">« Back to Index</a></strong>.</p>
+            <p><strong><a href="/Phaser-Tutorials/">&lt;== Back to Index</a></strong>.</p>
 <h1 id="development-environment-for-phaser-game-development">Development Environment for Phaser Game Development</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
