--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tutorial Index</title>
+	<link rel="stylesheet" href="css/fira_code.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/index.css">
 
 </head>
 <body>
 	<article class="vscode-light markdown-body">
-		<h1>Tutorial Index --></h1>
+		<h1>Tutorial Index</h1>
 		<p>A collection of Tutorials, meant as a teaching aid.</p>
 		<blockquote>None of these tutorials should be considered a <b>complete</b> guide to Phaser, they only serve the purpose to get you going.</blockquote>
 
