Adds missing index css class fixes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<article class="vscode-light markdown-body">
+	<article class="vscode-dark markdown-body">
 		<h1>Tutorial Index</h1>
 		<p>A collection of Tutorials, meant as a teaching aid.</p>
 		<blockquote>None of these tutorials should be considered a <b>complete</b> guide to Phaser, they only serve the purpose to get you going.</blockquote>
