--- a/Development-Environment.html
+++ b/Development-Environment.html
@@ -718,7 +718,7 @@ ol li {
     </head>
     <body>
         <article class="vscode-dark markdown-body">
-            <p><strong><a href="/Phaser-Tutorials/">&lt;== Back to Index</a></strong>.</p>
+            <p><strong><a href="/Phaser-Tutorials/">Back to Index</a></strong>.</p>
 <h1 id="development-environment-for-phaser-game-development">Development Environment for Phaser Game Development</h1>
 <p>This is the first in a tutorial series that aims to help you get started with the Phaser game framework.<br>
 In this first tutorial, we will focus on getting your development environment installed and properly configured.</p>
