Updates index style and content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 		<blockquote>None of these tutorials should be considered a <b>complete</b> guide to Phaser, they only serve the purpose to get you going.</blockquote>
 
 		<dl>
-			<dt><a href="Development-Environment.html">Development Environment for Phaser Game Development</a></dt>
+			<dt><b>HTML and CSS Primer</b> <i>COMING SOON&trade;</i></dt>
+			<dd><i>Create a simple website using HTML, and make it look good with CSS.</i></dd>
+			<dt><b>Javascript Primer</b> <i>COMING SOON&trade;</i></dt>
+			<dd><i>Use javascript to add dynamic elements to your website.</i></dd>
+			<dt><b>Javascript and jQuery</b> <i>COMING SOON&trade;</i></dt>
+			<dd><i>Utilize the javascript framework jQuery to create dynamic content and elements faster and easier.</i></dd>
+			<dt><b><a href="Development-Environment.html">Development Environment for Phaser Game Development</a></b></dt>
 			<dd><i>Get your development environment set up correctly, so that you can focus more on making stuff, and less on setup.</i></dd>
 		</dl>
 	</article>
